--- a/challenge-01/index.html
+++ b/challenge-01/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="./styles.css">
     <title>Frontend Mentor Challenge 1</title>
 </head>
+
 <body>
     <!-- MAIN CONTAINER FOR COMPONENT -->
     <div class="container">
@@ -20,21 +22,24 @@
                 <!-- Card Detail here -->
                 <div class="card-content">
                     <div>
-                        <img class="card-img__qr-code" src="./image-qr-code.png" width=288 height=288 alt="QR Code to scan"  id="qr-code">
+                        <img class="card-img__qr-code" src="./image-qr-code.png" width=288 height=288
+                            alt="QR Code to scan" id="qr-code">
                     </div>
-                        <div class="card-detail__title">
-                            Improve your front-end skills by building projects
-                        </div>
-                    <div class="card-detail__copy">    
-                            Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+                    <div class="card-detail__title">
+                        Improve your front-end skills by building projects
                     </div>
+                    <div class="card-detail__copy">
+                        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+                    </div>
+                </div>
+                <!-- Card Ends -->
+
             </div>
-            <!-- Card Ends -->
+            <!-- Card Container ends -->
+            <!-- REM button to toggle borders-->
+            <!-- Add a button to turn borders on and off -->
         </div>
-        <!-- Card Container ends -->
-        <!-- REM button to toggle borders-->
-        <!-- Add a button to turn borders on and off -->
-    </div>
-    <!-- MAIN CONTAINER FOR COMPONENT ENDS -->
+        <!-- MAIN CONTAINER FOR COMPONENT ENDS -->
 </body>
+
 </html>
