--- a/nan/index.html
+++ b/nan/index.html
@@ -17,14 +17,13 @@
           <img class="img" src="./img/heart.png" alt="qr code">
           <h1 class="caption">Not Just a Number</h1>
           <p class="text">
-            Due to economic downturn, Luno, is forced to let 350 of their staff go. The people affected are not mere
+            Luno, is forced to let staff go. The people affected are not mere
             numbers.
-            Our hearts are ripped out.
             <li>
-              <img src="./img/retrenched.png"> Retrenched: 350.
+              <img src="./img/retained.png"> Retained: 600.
             </li>
             <li>
-              <img src="./img/retained.png"> Retrenched: 600.
+              <img src="./img/retrenched.png"> Retrenched: 350.
             </li>
             </ul>
 
