--- a/nan/index.html
+++ b/nan/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="main.css">
   <title>NaN: Not just a Number</title>
 </head>
@@ -20,10 +23,10 @@
             Luno, is forced to let staff go. The people affected are not mere
             numbers.
             <li>
-              <img src="./img/retained.png"> Retained: 600.
+              <img src="./img/retained.png" class="icon"> Retained: 600.
             </li>
             <li>
-              <img src="./img/retrenched.png"> Retrenched: 350.
+              <img src="./img/retrenched.png" class="icon"> Retrenched: 350.
             </li>
             </ul>
 
