--- a/nan/index.html
+++ b/nan/index.html
@@ -20,20 +20,20 @@
           <img class="img" src="./img/heart.png" alt="qr code">
           <h1 class="caption">Not Just a Number</h1>
           <p class="text">
-            Luno, is forced to let staff go. The people affected are not mere
-            numbers.
+            Luno, is forced to let go of 35% of their workforce.
+          <ul>
             <li>
               <img src="./img/retained.png" class="icon"> Retained: 600.
             </li>
             <li>
               <img src="./img/retrenched.png" class="icon"> Retrenched: 350.
             </li>
-            </ul>
+          </ul>
 
-
-            <button lesson="one" id="1" onclick="navigateToLesson()">
-              Employ a Lunaut
-            </button>
+          </p>
+          <button lesson="one" id="1" onclick="navigateToLesson()">
+            Employ a Lunaut
+          </button>
         </div>
       </div>
     </div>
