Changed heart from PNG to SVG

--- a/nan/index.html
+++ b/nan/index.html
@@ -17,7 +17,7 @@
     <div class="card-container">
       <div class="card">
         <div>
-          <img id="myImg" src="./img/heart.png" data-original="original.png">
+          <img id="myImg" src="./img/heart.svg" data-original="original.png">
           <script>
             var originalImg = document.getElementById("myImg");
             var newImg = "./img/alt-nan.png";
